--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,37 @@ layout: compress
 <html lang="{{ page.lang | default: site.alt_lang | default: site.lang }}" {{ prefer_mode }}>
   {% include head.html %}
   <script async src="https://modoo-ads.pub-code.com/page/js/adsbymodoo.js?client=ca-pub-9997911924418943"></script>
+  <script>
+      // 광고 div 배열
+      const adBlocks = [
+          {
+              html: '<ins class="adsbymodoo" style="display:block" data-ad-client="ca-pub-9997911924418943" data-ad-box="rectangle" data-ad-slot="6063986386"></ins>',
+              script: "(adsbymodoo = window.adsbymodoo || []).push({});"
+          }
+      ];
+
+      // 모든 h2 태그
+      const h2Elements = document.querySelectorAll('h2');
+
+      // h2 태그 아래에 광고를 순서대로 삽입
+      h2Elements.forEach((h2, index) => {
+          // 현재 index를 adBlocks 길이로 나눈 나머지 값으로 쭈르륵 돌기
+      console.log("https://hottyjeff.com");
+          const adIndex = index % adBlocks.length;
+
+          // 광고 div를 생성하여 삽입
+          const adDiv = document.createElement('div');
+          adDiv.innerHTML = adBlocks[adIndex].html;
+
+          // h2 태그 밑에 광고 div를 삽입
+          h2.insertAdjacentElement('afterend', adDiv);
+
+          // 스크립트 태그를 생성하여 광고 스크립트 넣기
+          const script = document.createElement('script');
+          script.innerHTML = adBlocks[adIndex].script;
+          adDiv.appendChild(script);
+      });
+  </script>
 
   <body>
     {% include sidebar.html lang=lang %}
