--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,15 +89,17 @@ layout: compress
 
         const h2Elements = document.querySelectorAll('h2');
         h2Elements.forEach((h2, index) => {
-            const adIndex = index % adBlocks.length;
-            const adDiv = document.createElement('div');
-            adDiv.innerHTML = adBlocks[adIndex].html;
+            if ((index + 1) % 3 === 1) {
+                const adIndex = index % adBlocks.length;
+                const adDiv = document.createElement('div');
+                adDiv.innerHTML = adBlocks[adIndex].html;
 
-            h2.insertAdjacentElement('afterend', adDiv);
+                h2.insertAdjacentElement('afterend', adDiv);
 
-            const script = document.createElement('script');
-            script.innerHTML = adBlocks[adIndex].script;
-            adDiv.appendChild(script);
+                const script = document.createElement('script');
+                script.innerHTML = adBlocks[adIndex].script;
+                adDiv.appendChild(script);
+            }
         });
     </script>
   </body>
